qflood/02-qflood-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qflood
  name: qflood
  namespace: qflood
spec:
  clusterIP: 10.43.20.249
  clusterIPs:
  - 10.43.20.249
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: flood
    port: 3000
  - name: qbittorrent
    port: 8080
  selector:
    app: qflood
